--- a/src/main/java/application/ventana.form
+++ b/src/main/java/application/ventana.form
@@ -422,9 +422,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldNombreU">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldNombreUActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JSpinner" name="jSpinnerFNanio">
           <Properties>
@@ -603,14 +600,17 @@
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
-                                  <Component id="TextoHIC" min="-2" pref="85" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="151" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="1" attributes="0">
                                   <Component id="TextoActividadC" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                                   <Component id="jComboBoxActividadesC" min="-2" pref="156" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" alignment="1" attributes="0">
+                                  <Group type="103" groupAlignment="1" attributes="0">
+                                      <Component id="jDateChooser1" min="-2" max="-2" attributes="0"/>
+                                      <Component id="TextoHIC" min="-2" pref="85" max="-2" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace min="-2" pref="151" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="103" groupAlignment="0" attributes="0">
@@ -619,7 +619,7 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="19" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -645,14 +645,18 @@
                                       <Component id="TextoProfesorC" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                                       <Component id="jComboBoxProfesorC" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace type="separate" pref="21" max="32767" attributes="0"/>
+                                  <EmptySpace type="separate" max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Group type="102" alignment="1" attributes="0">
                                           <Component id="TextoFIC" min="-2" pref="30" max="-2" attributes="0"/>
                                           <EmptySpace min="-2" pref="147" max="-2" attributes="0"/>
                                       </Group>
                                       <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                                          <Component id="TextoHIC" min="-2" pref="30" max="-2" attributes="0"/>
+                                          <Group type="102" attributes="0">
+                                              <Component id="TextoHIC" min="-2" pref="30" max="-2" attributes="0"/>
+                                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                                              <Component id="jDateChooser1" min="-2" max="-2" attributes="0"/>
+                                          </Group>
                                           <Component id="jCalendar1" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
@@ -663,7 +667,7 @@
                                   <EmptySpace min="-2" pref="136" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace pref="9" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jTextFieldURLC" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                               <Component id="TextoURLC" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
@@ -672,12 +676,10 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
                                   <Component id="TextoFAC" min="-2" pref="30" max="-2" attributes="0"/>
-                                  <EmptySpace max="32767" attributes="0"/>
                               </Group>
                               <Group type="102" attributes="0">
-                                  <EmptySpace type="separate" pref="51" max="32767" attributes="0"/>
+                                  <EmptySpace type="separate" max="32767" attributes="0"/>
                                   <Component id="jCalendar2" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -859,10 +861,13 @@
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
+        <Component class="com.toedter.calendar.JDateChooser" name="jDateChooser1">
+        </Component>
       </SubComponents>
     </Container>
     <Container class="javax.swing.JInternalFrame" name="RegistrarActividadCU">
       <Properties>
+        <Property name="title" type="java.lang.String" value="Registrar Actividad"/>
         <Property name="selected" type="boolean" value="true"/>
         <Property name="visible" type="boolean" value="false"/>
       </Properties>
@@ -874,39 +879,32 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <Component id="jButtonCancelarActividad" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="jButtonAceptarActividad" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="TextoCostoA" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="TextoDuracionA" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="TextoDescA" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="TextoNombreA" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="TextoFechaA" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="jLabelInstituciones" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jCalendarFechaActividad" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                  <Component id="jTextFieldDescA" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="jTextFieldNombreA" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="jComboBoxInstituciones" alignment="0" pref="197" max="32767" attributes="0"/>
-                              </Group>
-                              <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                  <Component id="jTextFieldDuracionA" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="jTextFieldCostoA" alignment="0" pref="198" max="32767" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="TextoCostoA" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="TextoDuracionA" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="TextoDescA" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="TextoNombreA" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="TextoFechaA" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="jLabelInstituciones" min="-2" max="-2" attributes="0"/>
                   </Group>
+                  <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                          <Component id="jTextFieldDescA" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jTextFieldNombreA" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jComboBoxInstituciones" alignment="0" pref="197" max="32767" attributes="0"/>
+                      </Group>
+                      <Component id="jTextFieldDuracionA" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jTextFieldCostoA" alignment="0" pref="198" max="32767" attributes="0"/>
+                      <Component id="jDateChooserFActividad" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jButtonAceptarActividad" alignment="1" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
+              </Group>
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                  <Component id="jButtonCancelarActividad" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -941,10 +939,10 @@
                   </Group>
                   <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jCalendarFechaActividad" min="-2" max="-2" attributes="0"/>
                       <Component id="TextoFechaA" min="-2" max="-2" attributes="0"/>
+                      <Component id="jDateChooserFActividad" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="53" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jButtonCancelarActividad" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jButtonAceptarActividad" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -972,16 +970,10 @@
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldNombreA">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldNombreAActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldDescA">
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldDuracionA">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldDuracionAActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="TextoNombreA">
           <Properties>
@@ -1004,9 +996,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldCostoA">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldCostoAActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="TextoFechaA">
           <Properties>
@@ -1031,12 +1020,12 @@
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
-        <Component class="com.toedter.calendar.JCalendar" name="jCalendarFechaActividad">
-        </Component>
         <Component class="javax.swing.JLabel" name="jLabelInstituciones">
           <Properties>
             <Property name="text" type="java.lang.String" value="Instituciones"/>
           </Properties>
+        </Component>
+        <Component class="com.toedter.calendar.JDateChooser" name="jDateChooserFActividad">
         </Component>
       </SubComponents>
     </Container>
