--- a/src/main/java/logic/Presentacion/ConsultaActividad.form
+++ b/src/main/java/logic/Presentacion/ConsultaActividad.form
@@ -29,20 +29,20 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <Component id="jTextFieldBuscarUsuario" min="-2" pref="247" max="-2" attributes="0"/>
+                      <Component id="jTextFieldBuscarActividad" min="-2" pref="247" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="jButtonBuscarUsuario" min="-2" max="-2" attributes="0"/>
+                      <Component id="jButtonBuscarActividad" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="jButtonCancelarConsultaUsuario" min="-2" max="-2" attributes="0"/>
+                      <Component id="jButtonCancelarConsultaActividad" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="327" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
-                      <Component id="jScrollPaneConsultaUsuario" pref="0" max="32767" attributes="0"/>
+                      <Component id="jScrollPaneConsultaActividad" pref="0" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jScrollPane2" alignment="0" pref="0" max="32767" attributes="0"/>
+                  <Component id="jScrollPane3" alignment="0" pref="0" max="32767" attributes="0"/>
               </Group>
           </Group>
       </Group>
@@ -52,28 +52,28 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jTextFieldBuscarUsuario" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButtonBuscarUsuario" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jTextFieldBuscarActividad" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jButtonBuscarActividad" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPaneConsultaUsuario" min="-2" pref="144" max="-2" attributes="0"/>
+              <Component id="jScrollPaneConsultaActividad" min="-2" pref="144" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="jScrollPane2" min="-2" pref="205" max="-2" attributes="0"/>
+              <Component id="jScrollPane3" min="-2" pref="205" max="-2" attributes="0"/>
               <EmptySpace pref="76" max="32767" attributes="0"/>
-              <Component id="jButtonCancelarConsultaUsuario" min="-2" max="-2" attributes="0"/>
+              <Component id="jButtonCancelarConsultaActividad" min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JScrollPane" name="jScrollPaneConsultaUsuario">
+    <Container class="javax.swing.JScrollPane" name="jScrollPaneConsultaActividad">
       <AuxValues>
         <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
       </AuxValues>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="jTableListaUsuario">
+        <Component class="javax.swing.JTable" name="jTableListaActividad">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;    },&#xa;    new String [] {&#xa;        &quot;Nickname&quot;, &quot;Nombre&quot;, &quot;Apellido&quot;, &quot;Email&quot;,&quot;Fecha de Nacimiento&quot;&#xa;    }&#xa;){&#xa;            @Override&#xa;            public boolean isCellEditable(int row, int column) {&#xa;                return false; // Make all cells non-editable&#xa;            }}" type="code"/>
@@ -83,7 +83,7 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTableListaUsuarioMouseClicked"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTableListaActividadMouseClicked"/>
           </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JTable()"/>
@@ -91,32 +91,32 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JTextField" name="jTextFieldBuscarUsuario">
+    <Component class="javax.swing.JTextField" name="jTextFieldBuscarActividad">
     </Component>
-    <Component class="javax.swing.JButton" name="jButtonBuscarUsuario">
+    <Component class="javax.swing.JButton" name="jButtonBuscarActividad">
       <Properties>
         <Property name="text" type="java.lang.String" value="Buscar"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonBuscarUsuarioActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonBuscarActividadActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButtonCancelarConsultaUsuario">
+    <Component class="javax.swing.JButton" name="jButtonCancelarConsultaActividad">
       <Properties>
         <Property name="text" type="java.lang.String" value="Cancelar"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonCancelarConsultaUsuarioActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonCancelarConsultaActividadActionPerformed"/>
       </Events>
     </Component>
-    <Container class="javax.swing.JScrollPane" name="jScrollPane2">
+    <Container class="javax.swing.JScrollPane" name="jScrollPane3">
       <AuxValues>
         <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
       </AuxValues>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="jTableInformacionAsociada">
+        <Component class="javax.swing.JTable" name="jTableInformacionAsociadaa">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;    },&#xa;    new String [] {&#xa;        &quot;Clase&quot;, &quot;URL&quot;, &quot;Actividad Deportiva&quot;, &quot;Descripcion&quot;&#xa;    }&#xa;){&#xa;            @Override&#xa;            public boolean isCellEditable(int row, int column) {&#xa;                return false; // Make all cells non-editable&#xa;            }}" type="code"/>
@@ -128,7 +128,7 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTableInformacionAsociadaMouseClicked"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTableInformacionAsociadaaMouseClicked"/>
           </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JTable()"/>
