--- a/src/main/java/logic/Presentacion/RegistrarInstitucionCU.form
+++ b/src/main/java/logic/Presentacion/RegistrarInstitucionCU.form
@@ -4,9 +4,6 @@
   <Properties>
     <Property name="title" type="java.lang.String" value="Registrar Institucion"/>
   </Properties>
-  <AccessibilityProperties>
-    <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Registrar Institucion"/>
-  </AccessibilityProperties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
   </SyntheticProperties>
@@ -26,23 +23,26 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+              <Component id="jButtonCancelarInst" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="jButtonAceptarInt" min="-2" pref="97" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabelNombreInstitucion" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabelDescInstitucion" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabelurlInstitucion" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButtonCancelarInst" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                      <Component id="jTextFieldDescInstitucion" alignment="0" min="-2" pref="113" max="-2" attributes="0"/>
-                      <Component id="jTextFieldUrl" alignment="0" min="-2" pref="113" max="-2" attributes="0"/>
-                      <Component id="jTextFieldNombreInstitucion" alignment="0" min="-2" pref="113" max="-2" attributes="0"/>
-                  </Group>
-                  <Component id="jButtonAceptarInt" alignment="1" min="-2" pref="97" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="jTextFieldDescInstitucion" alignment="0" min="-2" pref="113" max="-2" attributes="0"/>
+                  <Component id="jTextFieldUrl" alignment="0" min="-2" pref="113" max="-2" attributes="0"/>
+                  <Component id="jTextFieldNombreInstitucion" alignment="0" min="-2" pref="113" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="23" max="32767" attributes="0"/>
+              <EmptySpace pref="135" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -64,7 +64,7 @@
                   <Component id="jLabelurlInstitucion" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jTextFieldUrl" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="60" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jButtonCancelarInst" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jButtonAceptarInt" alignment="3" min="-2" max="-2" attributes="0"/>
